--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "ini": "1.3.7",
     "kind-of@^6.0.0": "6.0.3"
   },
+  "pkg": {
+    "scripts": [
+      "dist/commands/*/*.js",
+      "node_modules/vm2/lib/contextify.js",
+      "node_modules/vm2/lib/setup-sandbox.js"
+    ]
+  },
   "scripts": {
     "build": "yarn clean; tsc",
     "check-licenses": "node bin/check-licenses.js",
     "clean": "rm -rf dist/*",
-    "dist-standalone": "nexe --verbose -i './dist/cli.js' --name datadog-ci --no-fs",
+    "dist-standalone": "pkg --compress GZip .",
     "dist-standalone:test": "jest --config ./jest.config-standalone.js",
     "format": "yarn tslint --fix && yarn prettier --write",
     "launch": "ts-node --transpile-only src/cli.ts",
@@ -84,7 +91,7 @@
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "jest-matcher-specific-error": "1.0.0",
-    "nexe": "^4.0.0-beta.19",
+    "pkg": "5.5.2",
     "prettier": "2.0.5",
     "proxy": "1.0.2",
     "ts-jest": "27.0.3",
