--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "build": "yarn clean; tsc",
-    "build:win": "yarn clean:win & tsc",
+    "build:win": "tsc",
     "check-licenses": "node bin/check-licenses.js",
     "clean:win": "rm dist -r",
     "clean": "rm -rf dist/*",
