--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
         run: |
           rm -rf dist
           rm -rf src
+          rm -rf node_modules
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
 
@@ -105,6 +106,7 @@ jobs:
         run: |
           rm dist -r
           rm src -r
+          rm node_modules -r
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
 
@@ -125,6 +127,7 @@ jobs:
         run: |
           rm -rf dist
           rm -rf src
+          rm -rf node_modules
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
 
