--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
 
-  build-binary-linux:
+  build-binary-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +33,6 @@ jobs:
         run: |
           rm -rf dist
           rm -rf src
-          rm -rf node_modules
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
       - name: Upload binaries to GitHub release
@@ -60,7 +59,6 @@ jobs:
         run: |
           rm dist -r
           rm src -r
-          rm node_modules -r
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
       - name: Upload binaries to GitHub release
@@ -87,7 +85,6 @@ jobs:
         run: |
           rm dist -r
           rm src -r
-          rm -rf node_modules
       - name: Test generated standalone binary
         run: yarn dist-standalone:test
       - name: Upload binaries to GitHub release
