--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "glob": "7.1.4",
     "inquirer": "8.2.0",
     "proxy-agent": "5.0.0",
+    "rimraf": "^3.0.2",
     "simple-git": "3.3.0",
     "ssh2": "1.4.0",
     "ssh2-streams": "0.4.10",
@@ -83,6 +84,7 @@
     "@types/inquirer": "8.1.3",
     "@types/jest": "24.0.15",
     "@types/node": "10.17.57",
+    "@types/rimraf": "^3.0.2",
     "@types/ssh2": "0.5.46",
     "@types/ssh2-streams": "0.1.8",
     "@types/sshpk": "1.10.5",
