--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "deep-extend": "0.6.0",
     "fast-xml-parser": "3.19.0",
     "form-data": "3.0.0",
+    "fuzzy": "^0.1.3",
     "glob": "7.1.4",
     "inquirer": "8.2.0",
+    "inquirer-checkbox-plus-prompt": "^1.0.1",
     "proxy-agent": "5.0.0",
     "rimraf": "^3.0.2",
     "simple-git": "3.3.0",
