--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "declaration" : true,
-    "sourceMap": false,
+    "sourceMap": true,
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
