--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "^3.293.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.315.0",
+    "@aws-sdk/client-iam": "^3.315.0",
     "@aws-sdk/client-lambda": "^3.293.0",
+    "@aws-sdk/client-sfn": "^3.315.0",
     "@aws-sdk/credential-providers": "^3.296.0",
     "@types/datadog-metrics": "0.6.1",
     "ajv": "^8.12.0",
