--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,6 +6,7 @@
 ## CI Visibility
 src/commands/junit   @DataDog/ci-app-libraries
 src/commands/sarif   @DataDog/ci-app-libraries
+src/commands/gate    @DataDog/ci-app-libraries
 src/commands/metric  @DataDog/ci-app-libraries
 src/commands/tag     @DataDog/ci-app-libraries
 src/commands/trace   @DataDog/ci-app-libraries
