--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ src/commands/react-native/__tests__/fixtures/with-sources-content/main.jsbundle.
 *.sarif
 !src/commands/sarif/__tests__/fixtures/*.sarif
 !src/commands/sarif/__tests__/fixtures/subfolder/*.sarif
+!src/commands/sarif/__tests__/fixtures/another_subfolder/*.sarif
 
 # Yarn non zero-install. See: https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 .pnp.*
