--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prepack": "yarn build && node ./bin/make-it-executable.js && rimraf 'dist/**/__tests__'",
     "prettier": "prettier \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
     "test": "jest --colors",
-    "test:debug": "node --inspect-brk `which jest` --runInBand",
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest --runInBand",
     "test:lambda": "jest src/commands/lambda --colors",
     "eslint": "eslint --quiet 'src/**/*.ts'",
     "typecheck": "bash bin/typecheck.sh",
