--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "resolutions": {
     "ini": "1.3.7",
-    "kind-of@^6.0.0": "6.0.3"
+    "kind-of@^6.0.0": "6.0.3",
+    "fast-xml-parser@npm:4.1.2": "4.2.4"
   },
   "pkg": {
     "scripts": [
@@ -72,7 +73,7 @@
     "datadog-metrics": "0.9.3",
     "deep-extend": "0.6.0",
     "deep-object-diff": "^1.1.9",
-    "fast-xml-parser": "^4.1.2",
+    "fast-xml-parser": "^4.2.4",
     "form-data": "3.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
