--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@aws-sdk/client-lambda": "^3.358.0",
     "@aws-sdk/client-sfn": "^3.358.0",
     "@aws-sdk/credential-providers": "^3.358.0",
+    "@aws-sdk/property-provider": "^3.357.0",
     "@types/datadog-metrics": "0.6.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
