--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "jest-matcher-specific-error": "1.0.0",
     "pkg": "5.5.2",
     "prettier": "2.0.5",
-    "proxy": "1.0.2",
+    "proxy": "^2.1.1",
     "ts-jest": "28.0.8",
     "ts-node": "8.8.1",
     "typescript": "4.3.5"
