--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "ssh2-streams": "0.4.10",
     "sshpk": "1.16.1",
     "tiny-async-pool": "1.2.0",
+    "uuid": "^9.0.0",
     "ws": "7.4.6",
     "xml2js": "0.5.0",
     "yamux-js": "0.1.2"
