--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@aws-sdk/credential-providers": "^3.358.0",
     "@aws-sdk/property-provider": "^3.357.0",
     "@types/datadog-metrics": "0.6.1",
+    "agent-base": "^7.1.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
@@ -78,15 +79,18 @@
     "form-data": "3.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
+    "http-proxy-agent": "7.0.0",
+    "https-proxy-agent": "7.0.1",
     "inquirer": "^8.2.5",
     "inquirer-checkbox-plus-prompt": "^1.4.2",
     "js-yaml": "3.13.1",
     "jszip": "^3.10.1",
     "ora": "5.4.1",
-    "proxy-agent": "^6.2.1",
+    "proxy-from-env": "1.1.0",
     "rimraf": "^3.0.2",
     "semver": "^7.5.3",
     "simple-git": "3.16.0",
+    "socks-proxy-agent": "8.0.1",
     "ssh2": "1.14.0",
     "ssh2-streams": "0.4.10",
     "sshpk": "1.16.1",
@@ -108,6 +112,7 @@
     "@types/jest": "28.1.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "14.18.34",
+    "@types/proxy-from-env": "1.0.1",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.12",
     "@types/ssh2": "1.11.6",
