--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@aws-sdk/client-sfn": "^3.358.0",
     "@aws-sdk/credential-providers": "^3.358.0",
     "@aws-sdk/property-provider": "^3.357.0",
+    "@google-cloud/run": "^0.6.0",
     "@types/datadog-metrics": "0.6.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
@@ -79,6 +80,7 @@
     "form-data": "3.0.0",
     "fuzzy": "^0.1.3",
     "glob": "7.1.4",
+    "google-auth-library": "^8.9.0",
     "inquirer": "^8.2.5",
     "inquirer-checkbox-plus-prompt": "^1.4.2",
     "js-yaml": "3.13.1",
