--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,7 @@ jobs:
         with:
           node-version: 18
       - name: Install tracer
-        run: yarn add --dev https://github.com/DataDog/dd-trace-js/tarball/juan-fernandez/fix-cache-issues-with-jest
+        run: yarn add --dev dd-trace@https://github.com/DataDog/dd-trace-js/tarball/juan-fernandez/fix-cache-issues-with-jest
       - run: yarn test
         env:
           CI: true
