--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,6 +181,7 @@ jobs:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
           DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
           DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
+          DD_CIVISIBILITY_ITR_ENABLED: 0
           DD_ENV: ci
           NODE_OPTIONS: -r dd-trace/ci/init
       - name: Run unit tests again (cache should kick in)
@@ -191,6 +192,7 @@ jobs:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
           DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
           DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
+          DD_CIVISIBILITY_ITR_ENABLED: 0
           DD_ENV: ci
           NODE_OPTIONS: -r dd-trace/ci/init
         
