--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,6 +172,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+      - run: yarn install
       # - name: Install tracer
       #   run: yarn add --dev dd-trace@https://github.com/DataDog/dd-trace-js/tarball/juan-fernandez/fix-cache-issues-with-jest
       - run: yarn test
