--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,8 +162,8 @@ jobs:
   #     - run: yarn install --immutable
   #     - run: yarn check-licenses
 
-  test-cache:
-    name: Test cache
+  test-cache-master:
+    name: Test cache for current release
     runs-on: ubuntu-latest
 
     steps:
@@ -173,8 +173,6 @@ jobs:
         with:
           node-version: 18
       - run: yarn install
-      # - name: Install tracer
-      #   run: yarn add --dev dd-trace@https://github.com/DataDog/dd-trace-js/tarball/juan-fernandez/fix-cache-issues-with-jest
       - run: yarn test
         env:
           CI: true
@@ -196,4 +194,38 @@ jobs:
           DD_CIVISIBILITY_ITR_ENABLED: 0
           DD_ENV: ci
           NODE_OPTIONS: -r dd-trace/ci/init
-        
+
+  test-cache-change:
+    name: Test cache for branch
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: yarn install
+      - name: Install tracer's branch
+        run: yarn add --dev dd-trace@https://github.com/DataDog/dd-trace-js/tarball/juan-fernandez/fix-cache-issues-with-jest
+      - run: yarn test
+        env:
+          CI: true
+          DD_SERVICE: datadog-ci-tests
+          DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
+          DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
+          DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
+          DD_CIVISIBILITY_ITR_ENABLED: 0
+          DD_ENV: ci
+          NODE_OPTIONS: -r dd-trace/ci/init
+      - name: Run unit tests again (cache should kick in)
+        run: yarn test
+        env:
+          CI: true
+          DD_SERVICE: datadog-ci-tests
+          DD_CIVISIBILITY_AGENTLESS_ENABLED: 1
+          DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
+          DD_APP_KEY: ${{ secrets.DATADOG_APP_KEY_MAIN_ACCOUNT }}
+          DD_CIVISIBILITY_ITR_ENABLED: 0
+          DD_ENV: ci
+          NODE_OPTIONS: -r dd-trace/ci/init
