--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
   bump-ci-integrations:
     name: Bump datadog-ci in integration
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       fail-fast: false
       matrix:
